Separeted BOCA in two packages: BOCA and BOCA-SUBMISSION-TOOLS
boca will continue to provide all boca server utilities
boca-submission-tools provides submission tools to users

Signed-off-by: Bruno Ribas <brunoribas@gmail.com>

--- a/debian/rules
+++ b/debian/rules
@@ -1,4 +1,10 @@
 #! /usr/bin/make -f
 
+override_dh_auto_install:
+	mkdir -p debian/boca-submission-tools
+	make -j1 install-submission-tools DESTDIR=debian/boca-submission-tools
+	mkdir -p debian/boca
+	make -j1 install DESTDIR=debian/boca
+
 %:
 	dh $@
