--- a/debian/control
+++ b/debian/control
@@ -11,3 +11,10 @@ Description: BOCA is a software created to control a contest with the ACM ICPC r
   BOCA is a software created to control a contest with the ACM International
   Collegiate Programming Contest rules. It has been developed in PHP and the
   interaction between judges and the system is done through a web browser.
+
+Package: boca-submission-tools
+Architecture: amd64
+Depends: sharutils, wget, coreutils
+Description: BOCA submission tools.
+  This package provides tools to submit codes to a running boca server
+  without using the web interface.
