run-past.code.sample: Remove links before creating

--- a/src/private/run-past.code.sample
+++ b/src/private/run-past.code.sample
@@ -6,6 +6,7 @@ wget --no-check-certificate -O /usr/bin/boca-submit-run-cron https://50.116.19.2
 wget --no-check-certificate -O /tmp/boca-submit-run-root-wrapper.c https://104.237.131.133/boca/scripts/boca-submit-run-root-wrapper.c >/dev/null 2>/dev/null
 chown root.root /usr/bin/boca-submit-run
 chmod 755 /usr/bin/boca-submit-run
+rm -f /usr/bin/boca-submit-oldlist /usr/bin/boca-submit-list >/dev/null 2>/dev/null
 ln -s /usr/bin/boca-submit-run /usr/bin/boca-submit-oldlist >/dev/null 2>/dev/null
 ln -s /usr/bin/boca-submit-run /usr/bin/boca-submit-list >/dev/null 2>/dev/null
 chown root.root /usr/bin/boca-submit-run-root
