--- a/debian/rules
+++ b/debian/rules
@@ -3,8 +3,10 @@
 override_dh_auto_install:
 	mkdir -p debian/boca-submission-tools
 	make -j1 install-submission-tools DESTDIR=debian/boca-submission-tools
-	mkdir -p debian/boca
-	make -j1 install DESTDIR=debian/boca
+	mkdir -p debian/boca-web
+	make -j1 install-bocaapache DESTDIR=debian/boca-web
+	mkdir -p debian/boca-autojudge
+	make -j1 install-bocaautojudge DESTDIR=debian/boca-autojudge
 
 %:
 	dh $@
