tools/000-boca.conf: Adds configuration specific for php-fpm
Signed-off-by: Bruno Cesar Ribas <brunoribas@gmail.com>

--- a/tools/000-boca.conf
+++ b/tools/000-boca.conf
@@ -1,3 +1,12 @@
+<Directory /usr/lib/cgi-bin>
+	Require all granted
+</Directory>
+<IfModule mod_fastcgi.c>
+	AddHandler php7-fcgi .php
+	Action php7-fcgi /php7-fcgi
+	Alias /php7-fcgi /usr/lib/cgi-bin/php7-fcgi
+	FastCgiExternalServer /usr/lib/cgi-bin/php7-fcgi -socket /var/run/php/php7.0-fpm.sock -idle-timeout 120 -pass-header Authorization
+</IfModule>
 <Directory /var/www/boca/src>
        AllowOverride Options AuthConfig Limit
        Order Allow,Deny
