.gitignore: updated accordingly
Signed-off-by: Bruno Cesar Ribas <brunoribas@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
 tools/boca-submit-run-root-wrapper
 tools/safeexec
+debian/.debhelper/
+debian/boca-autojudge.substvars
+debian/boca-autojudge/
+debian/boca-common.substvars
+debian/boca-common/
+debian/boca-db.substvars
+debian/boca-db/
+debian/boca-submission-tools/
+debian/boca-web.substvars
+debian/boca-web/
+debian/boca.substvars
+debian/boca/
+debian/debhelper-build-stamp
+debian/files
