--- a/debian/rules
+++ b/debian/rules
@@ -7,6 +7,10 @@ override_dh_auto_install:
 	make -j1 install-bocaapache DESTDIR=debian/boca-web
 	mkdir -p debian/boca-autojudge
 	make -j1 install-bocaautojudge DESTDIR=debian/boca-autojudge
+	mkdir -p debian/boca-db
+	make -j1 install-bocadb DESTDIR=debian/boca-db
+	mkdir -p debian/boca-common
+	make -j1 install-bocacommon DESTDIR=debian/boca-common
 
 %:
 	dh $@
