--- a/debian/control
+++ b/debian/control
@@ -30,7 +30,7 @@ Description: BOCA - database
 
 Package: boca-web
 Architecture: all
-Depends: boca-common, apache2, php, php-fpm
+Depends: boca-common, apache2, php-fpm, php
 Description: BOCA - WEB files
   BOCA is a software created to control a contest with the ACM International
   Collegiate Programming Contest rules. It has been developed in PHP and the
