--- a/tools/000-boca.conf
+++ b/tools/000-boca.conf
@@ -1,24 +1,21 @@
-<Directory /usr/lib/cgi-bin>
-	Require all granted
-</Directory>
-<IfModule mod_fastcgi.c>
-	AddHandler php7-fcgi .php
-	Action php7-fcgi /php7-fcgi
-	Alias /php7-fcgi /usr/lib/cgi-bin/php7-fcgi
-	FastCgiExternalServer /usr/lib/cgi-bin/php7-fcgi -socket /var/run/php/php7.0-fpm.sock -idle-timeout 120 -pass-header Authorization
-</IfModule>
-<Directory /var/www/boca/src>
-       AllowOverride Options AuthConfig Limit
-       Order Allow,Deny
-       Allow from all
-       AddDefaultCharset utf-8
-</Directory>
-<Directory /var/www/boca/src/private>
-       AllowOverride Options AuthConfig Limit
-       Deny from all
-</Directory>
-<Directory /var/www/boca>
-       AllowOverride Options AuthConfig Limit
-       Deny from all
-</Directory>
-Alias /boca /var/www/boca/src
+<VirtualHost *:80>
+
+  ServerAdmin boca@bombonera.org
+  DocumentRoot /var/www/boca
+  <Directory "/var/www/boca/src">
+         AllowOverride Options AuthConfig Limit
+         Order Allow,Deny
+         Allow from all
+         AddDefaultCharset utf-8
+  </Directory>
+  <Directory "/var/www/boca/src/private">
+         AllowOverride Options AuthConfig Limit
+         Deny from all
+  </Directory>
+  <Directory /var/www/boca>
+         AllowOverride Options AuthConfig Limit
+         Deny from all
+  </Directory>
+  Alias /boca /var/www/boca/src
+
+</VirtualHost>
