--- a/src/.htaccess
+++ b/src/.htaccess
@@ -1,5 +1,7 @@
-php_flag output_buffering on
-php_value memory_limit 1024M
-php_value post_max_size 128M
-php_flag magic_quotes_gpc off
-php_value upload_max_filesize 128M
+<IfModule !mod_proxy_fcgi.c>
+  php_flag output_buffering on
+  php_value memory_limit 1024M
+  php_value post_max_size 128M
+  php_flag magic_quotes_gpc off
+  php_value upload_max_filesize 128M
+</IfModule>
