--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: boca
 Section: misc
 Priority: optional
 Maintainer: BOCA Development Team <bocasystem@gmail.com>
-Uploaders: Cassio Polpo de Campos <cassiopc@gmail.com>, Bruno Cesar Ribas <brunoribas@gmail.com>
+Uploaders: Cassio Polpo de Campos <cassiopc@gmail.com>, Bruno Cesar Ribas <bruno.ribas@unb.br>
 Build-Depends: debhelper, build-essential
 
 Package: boca
