--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper-compat (= 13)
 
 Package: boca
 Architecture: all
-Depends: boca-common, boca-web, boca-db, boca-autojudge
+Depends: ${misc:Depends}, ${shlibs:Depends}, boca-common, boca-web, boca-db, boca-autojudge
 Provides: maratona-boca
 Description: BOCA is a software created to control a contest with the ACM ICPC rules.
  BOCA is a software created to control a contest with the ACM International
@@ -20,7 +20,7 @@ Description: BOCA is a software created to control a contest with the ACM ICPC r
 Package: boca-db
 Architecture: all
 Pre-depends: postgresql
-Depends: boca-common
+Depends: ${misc:Depends}, ${shlibs:Depends}, boca-common
 Description: BOCA - database
  BOCA is a software created to control a contest with the ACM International
  Collegiate Programming Contest rules. It has been developed in PHP and the
@@ -30,7 +30,7 @@ Description: BOCA - database
 
 Package: boca-web
 Architecture: all
-Depends: boca-common, apache2, php-fpm, php
+Depends: ${misc:Depends}, ${shlibs:Depends}, boca-common, apache2, php-fpm, php
 Description: BOCA - WEB files
  BOCA is a software created to control a contest with the ACM International
  Collegiate Programming Contest rules. It has been developed in PHP and the
@@ -41,7 +41,7 @@ Description: BOCA - WEB files
 Package: boca-common
 Architecture: all
 Pre-Depends: debconf, makepasswd, coreutils, sharutils
-Depends: php-zip, wget, php-cli, php-pgsql, php-gd, postgresql-client, php-xml, openssl, libany-uri-escape-perl
+Depends: ${misc:Depends}, ${shlibs:Depends}, php-zip, wget, php-cli, php-pgsql, php-gd, postgresql-client, php-xml, openssl, libany-uri-escape-perl
 Description: BOCA - Common files
  BOCA is a software created to control a contest with the ACM International
  Collegiate Programming Contest rules. It has been developed in PHP and the
@@ -51,7 +51,7 @@ Description: BOCA - Common files
 
 Package: boca-autojudge
 Architecture: amd64
-Depends: boca-common, debootstrap, schroot, quotatool, makepasswd
+Depends: ${misc:Depends}, ${shlibs:Depends}, boca-common, debootstrap, schroot, quotatool, makepasswd
 Description: BOCA - AutoJudge
  BOCA is a software created to control a contest with the ACM International
  Collegiate Programming Contest rules. It has been developed in PHP and the
@@ -62,7 +62,7 @@ Description: BOCA - AutoJudge
 
 Package: boca-submission-tools
 Architecture: amd64
-Depends: sharutils, wget, coreutils, libany-uri-escape-perl, openssl, openssh-server, logkeys
+Depends: ${misc:Depends}, ${shlibs:Depends}, sharutils, wget, coreutils, libany-uri-escape-perl, openssl, openssh-server, logkeys
 Description: BOCA submission tools.
  This package provides tools to submit codes to a running boca server
  without using the web interface.
