Add required field Standards-Version
The Standards-Version is a mandatory field and its absence violates the
Debian Policy and generates an error on lintian (required-field).

Also check the lintian recommended documentation in case of a package
that has been detected by the `required-field` rule/tag:
* Debian Policy Manual section 5.3
* Debian Policy Manual section 5.5
* Debian Policy Manual section 5.6.11

--- a/debian/control
+++ b/debian/control
@@ -4,6 +4,7 @@ Priority: optional
 Maintainer: BOCA Development Team <bocasystem@gmail.com>
 Uploaders: Cassio Polpo de Campos <cassiopc@gmail.com>, Bruno Cesar Ribas <bruno.ribas@unb.br>
 Build-Depends: debhelper-compat (= 13)
+Standards-Version: 4.6.0.1
 
 Package: boca
 Architecture: all
