--- a/debian/control
+++ b/debian/control
@@ -10,12 +10,12 @@ Package: boca
 Architecture: all
 Depends: ${misc:Depends}, ${shlibs:Depends}, boca-common, boca-web, boca-db, boca-autojudge
 Provides: maratona-boca
-Description: BOCA is a software created to control a contest with the ACM ICPC rules.
+Description: manage a contest with the ACM ICPC rules
  BOCA is a software created to control a contest with the ACM International
  Collegiate Programming Contest rules. It has been developed in PHP and the
  interaction between judges and the system is done through a web browser.
  .
- This package install all boca related packages to run everything in one
+ This metapackage install all boca related packages to run everything in a
  single machine.
 
 Package: boca-db
@@ -53,7 +53,7 @@ Description: BOCA - Common files
 Package: boca-autojudge
 Architecture: amd64
 Depends: ${misc:Depends}, ${shlibs:Depends}, boca-common, debootstrap, schroot, quotatool, makepasswd
-Description: BOCA - AutoJudge
+Description: automatic judge system for BOCA
  BOCA is a software created to control a contest with the ACM International
  Collegiate Programming Contest rules. It has been developed in PHP and the
  interaction between judges and the system is done through a web browser.
@@ -64,6 +64,6 @@ Description: BOCA - AutoJudge
 Package: boca-submission-tools
 Architecture: amd64
 Depends: ${misc:Depends}, ${shlibs:Depends}, sharutils, wget, libany-uri-escape-perl, openssl, openssh-server, logkeys
-Description: BOCA submission tools.
+Description: BOCA tools for headless code submission
  This package provides tools to submit codes to a running boca server
  without using the web interface.
