--- a/debian/control
+++ b/debian/control
@@ -31,7 +31,7 @@ Description: BOCA - database
 
 Package: boca-web
 Architecture: all
-Depends: ${misc:Depends}, ${shlibs:Depends}, boca-common, apache2, php-fpm, php
+Depends: ${misc:Depends}, ${shlibs:Depends}, boca-common, apache2, php8.1-fpm, php8.1
 Description: BOCA - WEB files
  BOCA is a software created to control a contest with the ACM International
  Collegiate Programming Contest rules. It has been developed in PHP and the
@@ -42,7 +42,7 @@ Description: BOCA - WEB files
 Package: boca-common
 Architecture: all
 Pre-Depends: debconf, makepasswd, sharutils
-Depends: ${misc:Depends}, ${shlibs:Depends}, php-zip, wget, php-cli, php-pgsql, php-gd, postgresql-client, php-xml, openssl, libany-uri-escape-perl
+Depends: ${misc:Depends}, ${shlibs:Depends}, php8.1-zip, wget, php8.1-cli, php8.1-pgsql, php8.1-gd, postgresql-client, php8.1-xml, openssl, libany-uri-escape-perl
 Description: BOCA - Common files
  BOCA is a software created to control a contest with the ACM International
  Collegiate Programming Contest rules. It has been developed in PHP and the
