--- a/debian/control
+++ b/debian/control
@@ -32,6 +32,7 @@ Description: BOCA - database
 Package: boca-web
 Architecture: all
 Depends: ${misc:Depends}, ${shlibs:Depends}, boca-common, apache2, php8.1-fpm, php8.1
+Conflicts: libapache2-mod-php
 Description: BOCA - WEB files
  BOCA is a software created to control a contest with the ACM International
  Collegiate Programming Contest rules. It has been developed in PHP and the
